--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -87,7 +87,7 @@
                       Protect Your Family <br>
                       and Your Future
                     </h1>
-                    <p>
+                    <p> This is triggered using git-hub webhook
                      Life insurance is the perfect safety net, helping you to protect your family if something unfortunate were to happen to you. Losing someone is a huge loss, and the last thing on anyone’s mind is the finances. With life insurance, you can continue protecting your family’s finances and future, even when you are not around.
 
                     </p>
